Use express to server html, fixed html to load the correct image path.

--- a/html/index.html
+++ b/html/index.html
@@ -685,12 +685,12 @@ Incoming Chat: <ul id="incomingChatMessages"></ul>
 
 <div style="position:relative;height:286px;width:531px;border:1px solid black;">
   <div id="gradientBox" style="cursor:crosshair;position:absolute;top:15px;left:15px;width:256px;height:256px;">
-    <img id="gradientImg" style="display:block;width:256px;height:256px;" src="/sites/default/files/64/source/color_picker_gradient.png" />
-    <img id="circle" style="position:absolute;height:11px;width:11px;" src="/sites/default/files/64/source/color_picker_circle.gif" />
+    <img id="gradientImg" style="display:block;width:256px;height:256px;" src="color_picker_gradient.png" />
+    <img id="circle" style="position:absolute;height:11px;width:11px;" src="color_picker_circle.gif" />
   </div>
   <div id="hueBarDiv" style="position:absolute;left:310px;width:35px;height:256px;top:15px;">
-    <img style="position:absolute;height:256px;width:19px;left:8px;" src="/sites/default/files/64/source/color_picker_bar.png" />
-    <img id="arrows" style="position:absolute;height:9px;width:35px;left:0px;" src="/sites/default/files/64/source/color_picker_arrows.gif" />
+    <img style="position:absolute;height:256px;width:19px;left:8px;" src="color_picker_bar.png" />
+    <img id="arrows" style="position:absolute;height:9px;width:35px;left:0px;" src="color_picker_arrows.gif" />
     <br />
   </div>
   <div style="position:absolute;left:370px;width:145px;height:256px;top:15px;">
